--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:contentDescription="@string/movie_poster"
-    android:minHeight="300dp"
-    android:minWidth="300dp" />
+    android:minWidth="@dimen/image_minimum"
+    android:minHeight="@dimen/image_minimum" />
