--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="padding">8dp</dimen>
+    <dimen name="movie_poster_width">185dp</dimen>
+    <dimen name="movie_poster_height">277dp</dimen>
+    <dimen name="image_minimum">300dp</dimen>
 </resources>
