--- a/app/src/main/res/menu/menu_movie_detail.xml
+++ b/app/src/main/res/menu/menu_movie_detail.xml
@@ -12,4 +12,15 @@
         android:orderInCategory="200"
         android:title="@string/top_rated"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/favorites"
+        android:orderInCategory="300"
+        android:title="@string/favorites"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/addMovies"
+        android:orderInCategory="400"
+        android:title="Add movies"
+        app:showAsAction="never" />
+
 </menu>
