--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -5,7 +5,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MoviesActivity">
+        tools:context=".ui.list.MoviesActivity">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
