--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -63,10 +63,23 @@
                     android:layout_marginStart="@dimen/padding"
                     android:layout_marginTop="@dimen/padding"
                     android:contentDescription="@string/the_movie_poster"
+                    android:onClick="@{(view)->item.onFavoriteClicked(view)}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@mipmap/ic_launcher" />
 
+                <ImageView
+                    android:id="@+id/favorite_star"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="@dimen/padding"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="@+id/movie_poster"
+                    app:layout_constraintTop_toTopOf="@+id/movie_poster"
+                    app:srcCompat="@android:drawable/btn_star_big_on" />
                 <TextView
                     android:id="@+id/release_date"
                     android:layout_width="wrap_content"
@@ -100,6 +113,41 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/movie_poster" />
+
+                <TextView
+                    android:id="@+id/label_trailers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/trailers"
+                    app:layout_constraintTop_toBottomOf="@+id/plot_overview" />
+
+                <TableLayout
+                    android:id="@+id/videos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="@+id/label_trailers">
+
+                    <TableRow>
+
+                    </TableRow>
+                </TableLayout>
+
+                <TextView
+                    android:id="@+id/label_reviews"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/trailers"
+                    app:layout_constraintTop_toBottomOf="@+id/plot_overview" />
+
+                <TableLayout
+                    android:id="@+id/reviews"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="@+id/label_trailers">
+
+                </TableLayout>
             </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
 
