--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -11,6 +11,10 @@
             name="item"
             type="com.snindustries.project.udacity.popularmovies.ui.details.MovieDetailActivity.MovieDetailViewModel" />
 
+        <variable
+            name="handler"
+            type="com.snindustries.project.udacity.popularmovies.ui.details.MovieDetailActivity.MovieDetailViewModel" />
+
     </data>
 
     <android.support.design.widget.CoordinatorLayout
@@ -39,6 +43,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    app:title="@{item.title}"
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
@@ -52,103 +57,11 @@
             tools:context=".ui.details.MovieDetailActivity"
             tools:showIn="@layout/activity_movie_detail">
 
-            <android.support.constraint.ConstraintLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent" />
 
-                <ImageView
-                    android:id="@+id/movie_poster"
-                    android:layout_width="@dimen/movie_poster_width"
-                    android:layout_height="@dimen/movie_poster_height"
-                    android:layout_marginStart="@dimen/padding"
-                    android:layout_marginTop="@dimen/padding"
-                    android:contentDescription="@string/the_movie_poster"
-                    android:onClick="@{(view)->item.onFavoriteClicked(view)}"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@mipmap/ic_launcher" />
-
-                <ImageView
-                    android:id="@+id/favorite_star"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_margin="@dimen/padding"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="@+id/movie_poster"
-                    app:layout_constraintTop_toTopOf="@+id/movie_poster"
-                    app:srcCompat="@android:drawable/btn_star_big_on" />
-                <TextView
-                    android:id="@+id/release_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{item.movieExt.movie.releaseDate}"
-                    android:layout_marginStart="@dimen/padding"
-                    android:layout_marginTop="@dimen/padding"
-                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
-                <TextView
-                    android:id="@+id/user_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{@string/vote_format( item.movieExt.movie.voteAverage )}"
-                    android:layout_marginStart="@dimen/padding"
-                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
-                    app:layout_constraintTop_toBottomOf="@+id/release_date" />
-
-                <TextView
-                    android:id="@+id/plot_overview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/padding"
-                    android:layout_marginEnd="@dimen/padding"
-                    android:layout_marginBottom="@dimen/padding"
-                    android:singleLine="false"
-                    android:text="@{item.movieExt.movie.overview}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/movie_poster" />
-
-                <TextView
-                    android:id="@+id/label_trailers"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:text="@string/trailers"
-                    app:layout_constraintTop_toBottomOf="@+id/plot_overview" />
-
-                <TableLayout
-                    android:id="@+id/videos"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="@+id/label_trailers">
-
-                    <TableRow>
-
-                    </TableRow>
-                </TableLayout>
-
-                <TextView
-                    android:id="@+id/label_reviews"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:text="@string/trailers"
-                    app:layout_constraintTop_toBottomOf="@+id/plot_overview" />
-
-                <TableLayout
-                    android:id="@+id/reviews"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="@+id/label_trailers">
-
-                </TableLayout>
-            </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
 
     </android.support.design.widget.CoordinatorLayout>
