--- a/app/src/main/res/menu/menu_movie_detail.xml
+++ b/app/src/main/res/menu/menu_movie_detail.xml
@@ -20,7 +20,7 @@
     <item
         android:id="@+id/addMovies"
         android:orderInCategory="400"
-        android:title="Add movies"
+        android:title="@string/add_movies"
+        android:visible="false"
         app:showAsAction="never" />
-
 </menu>
